# cmake_boost_template

./: .clang-format  CMakeLists.txt  README.md
include/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
